www/CSS/dreams.css
/* ... */
:root {
	--color1: #ffffff;
	--color2: #181818;
	--color3: #242424;
	--color4: #85782e;
    --color5: #859142;
    --color6: #ff0033;
  }
body {
	color: var(--color1);
	background-color: var(--color2);
	margin: 0;
	display: flex;
    flex-wrap: wrap;
    font-family: 'Poppins', sans-serif;
    /*font-variant: small-caps;*/
    letter-spacing: 2px;
    align-content: flex-start;
    font-weight: 300;
	-webkit-user-select: none;  /* Chrome all / Safari all */
	-moz-user-select: none;     /* Firefox all */
	-ms-user-select: none;      /* IE 10+ */
	user-select: none;      
}
input, textarea, button, select, a, div { -webkit-tap-highlight-color: rgba(0,0,0,0); }
body > *{
    width: 100%;
}
#loader{
    margin: auto;
    width: min-content;
}
input{
}
/* TEMP too many consequences */
/* model-viewer{
    position: absolute;
    height:80%;
} */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  margin: 0;
}

model-viewer {
    --poster-color: transparent
}


/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}
::-webkit-calendar-picker-indicator {
    filter: invert(1);
}

/* === GLOBALS END === */

#header{
    top:0;
    z-index: 5;
    padding: 5% 5% 0;
    font-family: 'Oswald', sans-serif;
    font-size: 20px;
    letter-spacing: 1px;
    font-weight: 500;
}
#header>*{
float: left;
}

/* TEMP removing and replacing */
/* #account .flex div{
    cursor: pointer;
    text-align: center;
} */
#account .flex div .br{
    margin: 15%;
    width: 70%;
}
#hd{
    margin: 9px 24px 24px 24px;
    width: calc(100% - 164px);
    text-align: center;
    cursor: pointer;
}
#hb{
    width: 42px;
    margin-bottom: 10px;
    cursor: pointer;
}
#hb div{
    height:3px;
    margin: 10px auto 10px auto;
    width: 90%;
    border-radius: 2px;
    background-color: var(--color1);
}
#hb:hover div{
    background-color: var(--color4);
}
.br{
    margin:auto;
    width:96%;
    height: 1px;
    background-color: var(--color1);
}
#ac{
    cursor: pointer;
    width: 48px;
}
#nav{
    top:64px;
    height:32px;
}
#content{
    top:96px;
    padding-bottom:64px;
    padding-top: 50px;
    padding-left: 5%;
    padding-right: 5%;
    max-width: 1600px;
    margin: 0 auto;

}
#footer{
    display: none;
    bottom: 0px;
    height: 32px;
    padding: 0 32px;
}

/*page specific*/
#default{
    overflow-x: hidden;
}
#default model-viewer{
    width:100%;
    height: 750px;
}
/*gallery*/
#gallery model-viewer{
    width:100%;
    height: 100%;

}
#gallery #header,#gallery #footer,#gallery #sidebar{
    display: none;
}
#gallery #content{
    padding: 0;
    top: 0;
}

/* TEMP remove lot wrappings */
/* #lotBox{
    padding: 5%;
    word-break: break-word;
}
#lotBox>.button{
    padding:16px;
}
#lotBox>*{
    padding: 5%;
} */
/* #lotBox model-viewer{
    width: 200;
    height: auto;
    position: relative;
    height: 300;
    float: left;
} */
#collectionBox{
    word-break: break-word;
    padding: 5%;
}
#assetList .box{
    padding: 32px 32px 0;
}
#assetList model-viewer{
    height:190px;
}
h1{
    font-weight: 700;
    margin-top: 0;
}
h2{
    
    font-family: 'Montserrat', sans-serif;
}
#collectionBox>*{
    padding: 5%;
}
#collectionBox model-viewer{
    width: 200;
    height: auto;
    position: relative;
    height: 300;
    float: left;
}

/*UI*/
#data{
    user-select: initial;
}
#modelSelect{
    position: absolute;
    bottom:0;
    top:80%;
    height: 20%;
    overflow-y: hidden;
    /* We set the scroll snapping */
    scroll-snap-type: x mandatory;
    /* Necessary for mobile scrolling */
    -webkit-overflow-scrolling: touch;
    /* For layout purposes */
    display: flex;
    overflow-x: scroll;

    text-align: center;
    scroll-behavior: smooth;
}
#modelSelect>*{
    min-width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
    background-repeat: no-repeat;
    background-size: cover;
    /* Set where the snapping should happen */
    scroll-snap-align: start;
    scroll-behavior: smooth;
}
#minimizeButton{
    display: none;
    position: absolute;
    width: 40px;
    height: 40px;
    left:16px;
    bottom:16px;
    transform: rotate(180deg);

}
#maximizeButton{
    display: none;
    position: absolute;
    width: 40px;
    height: 40px;
    bottom: calc(20% + 16px);
    left:16px;

}
#nextButton{
    position: absolute;
    transform: rotate(270deg);
    width: 40px;
    height: 40px;
    bottom: calc(10% - 20px);
    right:16px;
    z-index: 20;

}
.popup{
    padding: 5%;
    font-size: 16px;
	color: var(--color1);
	background-color: var(--color2);
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    z-index: 6;
}
.popup>div{
    background-color: var(--color2);
    padding: 16px;
    font-size: 18px;
    margin: 32px auto;
    width: 50%;
}
.popup a{
    color: var(--color4);
}
input, .popup textarea{
    display: initial;
    background-color: var(--color2);
    color: var(--color1);
    margin: 3% 25%;
    width: 50%;
    font-size: 22px;
    border:0px;
    border-bottom: 2px solid var(--color1);
}

#overlay{
    position: fixed;
    height: 100%;
    z-index: 11;
    display: none;
    opacity: 0;
    background-color: var(--color2);
}
#connectAccount .box{
    cursor: pointer;
    font-size: 12px;
    line-height: 1.5;
    text-align: center;
}
#connectAccount input{
    font-size: 24px;
    padding: 4px;
    border: 2px solid var(--color1);
    font-family: 'Montserrat';
}
#connectAccount{
    max-width: 600px;
    margin: auto;
    padding: 5%;
} 
select{
    background-color: var(--color1);
    font-family: 'Montserrat', sans-serif;
}

.pad{
    padding: 0 6%;
}
.mobile{
    display: none;
}
.mobile img{
    width: 100%;
}
.box{
    background-color: var(--color1);
    color: var(--color2);
    border: 2px solid var(--color2);
    margin:5px;
    padding: 5px;
    overflow: auto;
}
/* ... */

